### = 0.1.2
**Features**
- New debug option to show debug messages

**Technical**
- Minimap button config split by character
- New Logger framework
- Fix texture loading in banktab
- Fix freeze on reroll data sync
- Datasync optimization for rerolls and bankchars

### = 0.1.1
- Remove debug logs

### = 0.1.0
**Features**
- New Guild Bank Feature
- New Admin Tab for bank char management

**Technical**
- Fix locale bug
- Addon loading rework
- Data are now split by guild in a realm

### = 0.0.5
**Technical**
- Fix bug in data synchronizer
- Update Interface version to 11502

### = 0.0.4
**Features**
- New UI : GuildTools is now in a standalone frame
- New button on minimap
- New button in Blizzard guild panel to open GuildTools frame

### = 0.0.3
**Features**
- Auto detect self mode in HC at character connection
- New option panel for GuildTools in Blizzard option interface
- Add locale management (frFR and enUS for now)

**Technical**
- Multi realm management : Data are now split by realm

### = 0.0.2
**Features**
- Self mode tag management

**Technical**
- Synchronization data system improved
- Use of ChatThrottleLib to send addon messages

### = 0.0.1
**Features**
- Reroll group management
- Show main char name in chat when reroll send a message
- Prat3 (Chat addon) compatibility

**Technical**
- addon technical basis