@@ -18,16 +18,33 @@ function GT_BankService:RemoveBankChar(bankCharName)
     GT_EventManager:PublishEvent("REMOVE_BANKCHAR", historyEntry)
 end
 
-function GT_BankService:GetBankChars()
+function GT_BankService:GetUsefullCharData()
+    local lastUsefullEventByChar = {}
+
     table.sort(GT_Data.bankCharsHistory, function(entry1, entry2)
         local entry1Time = string.sub(entry1, 1, 10)
         local entry2Time = string.sub(entry2, 1, 10)
         return entry1Time < entry2Time
     end)
 
+    for index, entry in ipairs(GT_Data.bankCharsHistory) do
+        local time, action, fromPlayer, bankCharName = unpack(StringSplit(entry, ":"))
+
+        lastUsefullEventByChar[bankCharName] = entry
+    end
+
+    local dataToSynchronize = {}
+    for bankCharName, entry in pairs(lastUsefullEventByChar) do
+        table.insert(dataToSynchronize, entry)
+    end
+
+    return dataToSynchronize
+end
+
+function GT_BankService:GetBankChars()
     local historyCompilation = {}
 
-    for index, entry in ipairs(GT_Data.bankCharsHistory) do
+    for index, entry in ipairs(self:GetUsefullCharData()) do
         local time, action, fromPlayer, bankCharName = unpack(StringSplit(entry, ":"))
         if action == "ADD_BANKCHAR" then
             historyCompilation[bankCharName] = true
