@@ -2,7 +2,7 @@ local selfFoundSynchronizer
 
 GT_EventManager:AddEventListener("ADDON_READY", function()
     selfFoundSynchronizer = GT_SynchronizerFactory:CreateSynchronizer("GT_HC_SF",
-        function() return GT_Data.selffoundHistory end,
+        GT_HardcoreService.GetUsefullSelffoundData,
         function(historyEntry)
             if not IsInTable(GT_Data.selffoundHistory, historyEntry) then
                 table.insert(GT_Data.selffoundHistory, historyEntry)
